fixing CR results, peaks registration

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,8 +4,8 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">A special thanks to the 29 teams and over 700 athletes who made the 2017 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 6 new meet records broken this year. We look forward to seeing all the teams compete next year at the 2018 Illinois Club Relays on February 24th, 2018!</div>
-        <div class="club-large"><a class="link" target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSRkhDUTRLa0xoNUU" analytics-on="click" analytics-event="Viewed club relays results">2017 Club Relays Results</a></div>
+        <div class="club-large">A special thanks to the 28 teams and over 650 athletes who made the 2018 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by several new meet records broken this year. We look forward to seeing all the teams compete next year at the 2019 Illinois Club Relays!</div>
+        <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/325396/results" analytics-on="click" analytics-event="Viewed club relays results">2018 Club Relays Results</a></div>
       </div>
 
       <div class="info">
