fixing peaks schedule

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -43,20 +43,24 @@
             <div flex="40">100 Dash</div>
             <div flex="40">Triple Jump</div>
           </div>
-          <div class="table-row" layout="row">
-            <div flex="40">5000m Run</div>
+           <div class="table-row" layout="row">
+            <div flex="40">800m Run</div>
             <div flex="40">Shot Put</div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="40">400m Dash</div>
-            <div flex="40">Discus</div>
+            <div flex="40">5000m Run</div>
+              <div flex="40">Discus</div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="40">4x100m Relay</div>
+            <div flex="40">3000m Steeplechase</div>
+           <div flex="40"></div>
+          </div>
+             <div class="table-row" layout="row">
+            <div flex="40">400m Dash</div>
             <div flex="40"></div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="40">800m Run</div>
+            <div flex="40">4x100m Relay</div>
             <div flex="40"></div>
           </div>
           <div class="table-row" layout="row">
