--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,7 +4,7 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">A special thanks to the 28 teams and over 650 athletes who made the 2018 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by several new meet records broken this year. We look forward to seeing all the teams compete next year at the 2019 Illinois Club Relays!</div>
+        <div class="club-large">A special thanks to the 28 teams and over 650 athletes who made the 2018 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by several new meet records broken this year. We look forward to seeing all the teams compete next year at the 2019 Illinois Club Relays on February 23rd!</div>
         <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/325396/results" analytics-on="click" analytics-event="Viewed club relays results">2018 Club Relays Results</a></div>
       </div>
 
