picture resolutions, board minutes, club relays

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,14 +4,14 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">A special thanks to the 28 teams and over 650 athletes who made the 2018 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by several new meet records broken this year. We look forward to seeing all the teams compete next year at the 2019 Illinois Club Relays on February 23rd!</div>
+        <div class="club-large">The Illinois Club Relays is back on February 23rd, 2019! Last year we had 28 teams and over 650 athletes compete, and we look to make 2019 the biggest and best one yet! Registration information can be found below. We look forward to seeing everyone at the Armory on February 23rd!</div>
         <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/325396/results" analytics-on="click" analytics-event="Viewed club relays results">2018 Club Relays Results</a></div>
       </div>
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
         <div>Please contact Sean Frintner, meet coordinator, at <a class="link" href="mailto:seanef2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">seanef2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div> <div>
-        <a class="link" href="https://www.athletic.net/TrackAndField/meet/325396/register" analytics-on="click" analytics-event="Clicked to go to Athletic.net">Register on Athletic.net</a></div>
+        <a class="link" href="https://www.athletic.net/TrackAndField/meet/356067/register" analytics-on="click" analytics-event="Clicked to go to Athletic.net">Register on Athletic.net</a></div>
       </div>
 
       <div class="info">
@@ -26,7 +26,7 @@
         on weekends, with the exception of lots or spaces labeled as enforced 24/7, there are no
         parking restrictions for University lots or spaces. Private parking is enforced as posted. City of
         Champaign meters are enforced as posted.<div> <div> 
-        Parking is available near the Armory in lot C9 to the north; *NOT* E12 directly to the south (There is an event at Huff Hall on 2/24) ; E18, E19, and E15 3 blocks to the south; and E2 4 blocks to the
+        Parking is available near the Armory in lot C9 to the north; *NOT* E12 directly to the south; E18, E19, and E15 3 blocks to the south; and E2 4 blocks to the
         southeast. Street parking is available on 4th street to the west (City of Champaign meters
         enforced 7am ‐ 9pm Mon ‐ Sat), 6th street to the east, and Peabody & Pennsylvania to the
         south. <div> <div> 
