--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -16,7 +16,7 @@
     </div>
     <div class="faq-question">
       <div class="itc-h5">How/when do we train?</div>
-      <div>IFor cross country, training plans are written by the coach and gender minority captain. They take into account varying ability levels and busy schedules. In track and cross country, distance meets every weekday at 4:15 PM and on Sunday mornings for long runs at the west side of the Armory (by the flagpole). Sprinters and throwers usually meet weekdays at 6 PM at the Armory. During the winter, everyone meets at 10 PM at the Armory on Tuesdays.</div>
+      <div>For cross country, training plans are written by the coach and gender minority captain. They take into account varying ability levels and busy schedules. In track and cross country, distance meets every weekday at 4:15 PM and on Sunday mornings for long runs at the west side of the Armory (by the flagpole). Sprinters and throwers usually meet weekdays at 6 PM at the Armory. During the winter, everyone meets at 10 PM at the Armory on Tuesdays.</div>
     </div>
     <div class="faq-question">
       <div class="itc-h5">What is the cost?</div>
