Removed peaks, fixed schedule, changed banner

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,8 +4,8 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">The Illinois Club Relays is back on February 23rd, 2019! Last year we had 28 teams and over 650 athletes compete, and we look to make 2019 the biggest and best one yet! Registration information can be found below. We look forward to seeing everyone at the Armory on February 23rd!</div>
-        <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/325396/results" analytics-on="click" analytics-event="Viewed club relays results">2018 Club Relays Results</a></div>
+        <div class="club-large">Thanks to all the athletes, parents, officials, and volunteers who made Club Relays 2019 a success! We hope to see everyone back next year for Club Relays 2020!</div>
+        <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/356067/results" analytics-on="click" analytics-event="Viewed club relays results">2019 Club Relays Results</a></div>
       </div>
 
       <div class="info">
