Revert "Himmel Updates and Minutes"

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -10,7 +10,7 @@
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
-        <div>Please contact Bryan Himmel, meet coordinator, at <a class="link" href="mailto:bhimmel2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">bhimmel2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div> <div>
+        <div>Please contact Sean Frintner, meet coordinator, at <a class="link" href="mailto:seanef2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">seanef2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div> <div>
         <a class="link" href="https://www.athletic.net/TrackAndField/meet/356067/register" analytics-on="click" analytics-event="Clicked to go to Athletic.net">Register on Athletic.net</a></div>
       </div>
 
