schedule updates and club relays date

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -6,6 +6,7 @@
         <div class="itc-h5"></div>
         <div class="club-large">Thanks to all the athletes, parents, officials, and volunteers who made Club Relays 2019 a success! We hope to see everyone back next year for Club Relays 2020!</div>
         <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/356067/results" analytics-on="click" analytics-event="Viewed club relays results">2019 Club Relays Results</a></div>
+        <div class="club-large">Club Relays 2020 will be held on Saturday, February 29th in 2020</div>
       </div>
 
       <div class="info">
