track outdoor schedule

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,14 +4,14 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">Thanks to all the athletes, parents, officials, and volunteers who made Club Relays 2019 a success! We hope to see everyone back next year for Club Relays 2020!</div>
-        <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/356067/results" analytics-on="click" analytics-event="Viewed club relays results">2019 Club Relays Results</a></div>
+        <div class="club-large">Thank you to everyone who made Club Relays 2020 a success! Once again we had over 700 athletes compete! We hope to see everyone back next year! </div>
+        <div class="club-large"><a class="link" target="_blank" href="https://www.athletic.net/TrackAndField/meet/391991/results" analytics-on="click" analytics-event="Viewed club relays results">2020 Club Relays Results</a></div>
       </div>
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
         <div>Please contact Bryan Himmel, meet coordinator, at <a class="link" href="mailto:bhimmel2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">bhimmel2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div> <div>
-        <a class="link" href="https://www.athletic.net/TrackAndField/meet/356067/register" analytics-on="click" analytics-event="Clicked to go to Athletic.net">Register on Athletic.net</a></div>
+        <a class="link" href="" analytics-on="click" analytics-event="Clicked to go to Athletic.net"><!--Register on Athletic.net!--></a></div>
       </div>
 
       <div class="info">
